--- a/FrontendGameShock/home.html
+++ b/FrontendGameShock/home.html
@@ -5,59 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home_style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <title>GameShock</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <div class="img_shock"></div>
-            <h2>GAMESHOCK</h2>
-        </div>
-        <div class="utility">
-            <ul class="menu">
-                <li class="flip_menu"><a href="">Home</a></li>
-                <li class="flip_menu"><a href="">VideoGame</a></li>
-                <li class="flip_menu"><a href="">Accessori</a></li>
-                <li class="flip_menu"><a href="">Informazioni</a></li>
-            </ul>
-            <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
-        </div>
-    </nav>
 
-    <div class="showcase">
-        <div class="showcase_content_img">
-            <h1>GAMESHOCK</h1>
-            <h3>Passa dalla nostra parte per vincere</h3>
+    <div class="img_subbackground"></div>
+    <div class="page">
+        <nav class="navbar">
+            <div class="logo">
+                <div class="img_shock"></div>
+                <h2>GAMESHOCK</h2>
+            </div>
+            <div class="utility">
+                <ul class="menu">
+                    <li class="flip_menu"><a href="">Home</a></li>
+                    <li class="flip_menu"><a href="">VideoGame</a></li>
+                    <li class="flip_menu"><a href="">Accessori</a></li>
+                    <li class="flip_menu"><a href="">Informazioni</a></li>
+                </ul>
+                <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
+            </div>
+        </nav>
+
+        <div class="showcase">
+            <div class="showcase_content_img">
+                <h1>GAMESHOCK</h1>
+                <h3>Passa dalla nostra parte per vincere</h3>
+            </div>
         </div>
+
+
+        <section class="videogame_choice">
+            <div class="img_videogame"></div>
+            <div class="text_videogame">
+                <h2>Videogame
+                </h2>
+                <p>Scegli quello giusto per te ed impegnati per diventare
+                    il più forte.
+                    <br>
+                    Abbiamo una vasta scelta di videogiochi per tutte le console </p>
+            </div>
+        </section>
     </div>
 
 
-    <section class="videogame_choice">
-        <div class="img_videogame"></div>
-        <div class="text_videogame">
-            <h2>Videogame
-            </h2>
-            <p>Scegli quello giusto per te ed impegnati per diventare
-                il più forte.
-                <br>
-                Abbiamo una vasta scelta di videogiochi per tutte le console </p>
-        </div>
-    </section>
 
+        <section class="trasparent_platform_img">
 
-    <section class="accessory_choice">
-        <div class="text_accessory">
-            <h2>Videogame
-            </h2>
-            <p>Scegli quello giusto per te ed impegnati per diventare
-                il più forte.
-                <br>
-                Abbiamo una vasta scelta di videogiochi per tutte le console </p>
-        </div>
-        <div class="img_accessory"></div>
-    </section>
+        </section>
 
+    <div class="page">
+        <section class="accessory_choice">
+            <div class="text_accessory">
+                <h2>Accessori</h2>
+                <p>Ogni singolo accessorio può fare la differenza in ogni partita.
+                    Scegli quello giusto e vedrai i risultati!
+                    <br>
+                    Abbiamo una vasta scelta di accessori per tutte le console </p>
+            </div>
+            <div class="img_accessory"></div>
+        </section>
 
+        <footer class="footer">
+            <div class="social_footer">
+                <a href="" class="link_social"><i class="fab fa-facebook-square fa-3x flip"></i></a>
+                <a href="" class="link_social"><i class="fab fa-twitter fa-3x flip"></i></a>
+                <a href="" class="link_social"><i class="fab fa-instagram fa-3x flip"></i></a>
+                <a href="" class="link_social"><i class="fab fa-telegram-plane fa-3x flip"></i></a>
+            </div>
+        </footer>
+    </div>
 
 
 </body>
