Creazione pagine videogame e accessori

--- a/FrontendGameShock/home.html
+++ b/FrontendGameShock/home.html
@@ -19,9 +19,9 @@
             </div>
             <div class="utility">
                 <ul class="menu">
-                    <li class="flip_menu"><a href="">Home</a></li>
-                    <li class="flip_menu"><a href="">VideoGame</a></li>
-                    <li class="flip_menu"><a href="">Accessori</a></li>
+                    <li class="flip_menu"><a href="home.html">Home</a></li>
+                    <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
+                    <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
                     <li class="flip_menu"><a href="">Informazioni</a></li>
                 </ul>
                 <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
