--- a/FrontendGameShock/dettagli_accessorio.html
+++ b/FrontendGameShock/dettagli_accessorio.html
@@ -31,9 +31,10 @@
         </div>
         <div class="info_accessorio">
             <h1>Nome Accessorio</h1>
-            <h3>Codice</h3>
-            <h3>Genere</h3>
-            <h3>Prezzo</h3>
+            <h3>Codice: codice1</h3>
+            <h3>Genere: genere1</h3>
+            <h3><span class="new_price">Prezzo nuovo: 100$</span></h3>
+            <h3><span class="old_price">Prezzo usato: 50$</span></h3>
         </div>
     </section>
 
