Implementazione amministratore e login completata

--- a/FrontendGameShock/inserisci_videogame_amm.html
+++ b/FrontendGameShock/inserisci_videogame_amm.html
@@ -30,12 +30,11 @@
             <ul class="list_operation">
                 <li><a href="/home_amm.html">Home Admin</a></li>
                 <li><a href="/inserisci_videogame_amm.html">Insert Videogame</a></li>
-                <li><a href="">Insert Accessory</a></li>
-                <li><a href="">Delete Videogame</a></li>
-                <li><a href="">Delete Accessory</a></li>
-                <li><a href="">Show Videogame</a></li>
-                <li><a href="">Show Accessory</a></li>
-                <li><a href="">Show All Items</a></li>
+                <li><a href="/inserisci_accessorio_amm.html">Insert Accessory</a></li>
+                <li><a href="/cancella_videogame_amm.html">Delete Videogame</a></li>
+                <li><a href="/cancella_accessorio_amm.html">Delete Accessory</a></li>
+                <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
+                <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
             </ul>
         </div>
     </nav>
@@ -52,12 +51,6 @@
             <h6>Rating:</h6>
             <input type="text" placeholder="Minecraft">
             <h6>New Price:</h6>
-            <input type="text" placeholder="Minecraft">
-            <h6>Used Price:</h6>
-            <input type="text" placeholder="Minecraft">
-            <h6>Used Price:</h6>
-            <input type="text" placeholder="Minecraft">
-            <h6>Used Price:</h6>
             <input type="text" placeholder="Minecraft">
             <h6>Used Price:</h6>
             <input type="text" placeholder="Minecraft">
