--- a/FrontendGameShock/cancella_accessorio_amm.html
+++ b/FrontendGameShock/cancella_accessorio_amm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home_amm_style.css">
+    <link rel="stylesheet" href="cancella_accessorio_amm_style.css">
     <title>Document</title>
 </head>
 <body>
@@ -36,12 +36,18 @@
                 <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
                 <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
             </ul>
-
         </div>
     </nav>
 
     <section class="content_page">
-       <h1>BENVENUTO NOME ADMIN</h1>
+        <h3>Delete Accessory</h3>
+        <form action="" method="post">
+            <div>
+                <h6>Code:</h6>
+                <input type="text" placeholder="Minecraft">
+            </div>
+            <input type="submit" name="Delete">
+        </form>
     </section>
     
 </body>
