--- a/FrontendGameShock/login_amm.html
+++ b/FrontendGameShock/login_amm.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home_amm_style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="login_amm_style.css">
+    <title>Login</title>
 </head>
 <body>
 
@@ -25,24 +25,18 @@
         </div>
     </nav>
 
-    <nav class="navdrawer">
-        <div class="navdrawer_content">
-            <ul class="list_operation">
-                <li><a href="/home_amm.html">Home Admin</a></li>
-                <li><a href="/inserisci_videogame_amm.html">Insert Videogame</a></li>
-                <li><a href="/inserisci_accessorio_amm.html">Insert Accessory</a></li>
-                <li><a href="/cancella_videogame_amm.html">Delete Videogame</a></li>
-                <li><a href="/cancella_accessorio_amm.html">Delete Accessory</a></li>
-                <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
-                <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
-            </ul>
-
-        </div>
-    </nav>
-
-    <section class="content_page">
-       <h1>BENVENUTO NOME ADMIN</h1>
+    <section class="form_input">
+        <form action="" method="post">
+            <h3>Login</h3>
+            <h6>Email or Username</h6>
+            <input type="text" placeholder="mario.rossi@gmail.com">
+            <h6>Password</h6>
+            <input type="password">
+            <br>
+            <input type="submit" value="Sign in">
+        </form>
     </section>
+    
     
 </body>
 </html>
