--- a/FrontendGameShock/vedi_accessorio_amm.html
+++ b/FrontendGameShock/vedi_accessorio_amm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home_amm_style.css">
+    <link rel="stylesheet" href="vedi_accessorio_amm_style.css">
     <title>Document</title>
 </head>
 <body>
@@ -36,13 +36,53 @@
                 <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
                 <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
             </ul>
-
         </div>
     </nav>
 
     <section class="content_page">
-       <h1>BENVENUTO NOME ADMIN</h1>
+        <h3>Show Accessory</h3>
+        <div class="content_item">
+            <div class="img_item">
+                <img src="img/controller.jpg" alt="">
+            </div>
+            <h5>Name: nomeprova</h5>
+            <h5>Code: codiceprova</h5>
+            <h5>Platform: nomepiattaforma</h5>
+        </div>
+        <div class="content_item">
+            <div class="img_item">
+                <img src="img/controller.jpg" alt="">
+            </div>
+            <h5>Name: nomeprova</h5>
+            <h5>Code: codiceprova</h5>
+            <h5>Platform: nomepiattaforma</h5>
+        </div>
+        <div class="content_item">
+            <div class="img_item">
+                <img src="img/controller.jpg" alt="">
+            </div>
+            <h5>Name: nomeprova</h5>
+            <h5>Code: codiceprova</h5>
+            <h5>Platform: nomepiattaforma</h5>
+        </div>
+        <div class="content_item">
+            <div class="img_item">
+                <img src="img/controller.jpg" alt="">
+            </div>
+            <h5>Name: nomeprova</h5>
+            <h5>Code: codiceprova</h5>
+            <h5>Platform: nomepiattaforma</h5>
+        </div>
+        <div class="content_item">
+            <div class="img_item">
+                <img src="img/controller.jpg" alt="">
+            </div>
+            <h5>Name: nomeprova</h5>
+            <h5>Code: codiceprova</h5>
+            <h5>Platform: nomepiattaforma</h5>
+        </div>
     </section>
-    
+
+
 </body>
 </html>
