Implementazione video e rivisitazione pagine

--- a/FrontendGameShock/informazioni.html
+++ b/FrontendGameShock/informazioni.html
@@ -17,10 +17,11 @@
         </div>
         <div class="utility">
             <ul class="menu">
-                <li class="flip_menu"><a href="home.html">Home</a></li>
-                <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
-                <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
-                <li class="flip_menu"><a href="">Informazioni</a></li>
+              <li class="flip_menu"><a href="home.html">Home</a></li>
+              <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
+              <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
+              <li class="flip_menu"><a href="informazioni.html">Informazioni</a></li>
+              <li class="flip_menu"><a href="login_amm.html">Accedi</a></li>
             </ul>
             <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
         </div>
