--- a/FrontendGameShock/login_amm.html
+++ b/FrontendGameShock/login_amm.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login_amm_style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
@@ -17,24 +19,31 @@
         <div class="utility">
             <ul class="menu">
                 <li class="flip_menu"><a href="home.html">Home</a></li>
-                <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
-                <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
-                <li class="flip_menu"><a href="">Informazioni</a></li>
+                    <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
+                    <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
+                    <li class="flip_menu"><a href="informazioni.html">Informazioni</a></li>
+                    <li class="flip_menu"><a href="login_amm.html">Accedi</a></li>
             </ul>
             <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
         </div>
     </nav>
 
-    <section class="form_input">
-        <form action="" method="post">
-            <h3>Login</h3>
-            <h6>Email or Username</h6>
-            <input type="text" placeholder="mario.rossi@gmail.com">
-            <h6>Password</h6>
-            <input type="password">
-            <br>
-            <input type="submit" value="Sign in">
-        </form>
+    <section class="page_content">
+        <video autoplay muted>
+            <source src="img/Lightning - 28067.mp4" type="video/mp4">
+            Il browswer non supporta il video
+        </video>
+        <div class="login_form">
+            <form action="" method="post">
+                <h3>Login</h3>
+                <h6 id="text_email">Email or Username</h6>
+                <input type="text" placeholder="mario.rossi@gmail.com">
+                <h6 id="text_pwd">Password</h6>
+                <input type="password">
+                <br>
+                <input type="submit" value="Sign in">
+            </form>
+        </div>
     </section>
     
     
