Finita parte non amministratore

--- a/FrontendGameShock/home.html
+++ b/FrontendGameShock/home.html
@@ -40,7 +40,7 @@
         </div>
 
 
-        <video controls autoplay muted>
+        <video loop="true" autoplay="autoplay" muted>
             <source src="img/gamers.mp4" type="video/mp4">
         </video>
 
