--- a/FrontendGameShock/dettagli_accessorio.html
+++ b/FrontendGameShock/dettagli_accessorio.html
@@ -62,7 +62,7 @@
 
 
     <section class="recommended">
-        <h1>VideoGame consigliati</h1>
+        <h1>Accessori consigliati</h1>
 
         <div class="recommended_products">
             <div class="box_recommended_products">
