Sistemata parte grossa admin

--- a/FrontendGameShock/home_amm.html
+++ b/FrontendGameShock/home_amm.html
@@ -31,8 +31,6 @@
                 <li><a href="/home_amm.html">Home Admin</a></li>
                 <li><a href="/inserisci_videogame_amm.html">Insert Videogame</a></li>
                 <li><a href="/inserisci_accessorio_amm.html">Insert Accessory</a></li>
-                <li><a href="/cancella_videogame_amm.html">Delete Videogame</a></li>
-                <li><a href="/cancella_accessorio_amm.html">Delete Accessory</a></li>
                 <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
                 <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
             </ul>
@@ -42,6 +40,7 @@
 
     <section class="content_page">
        <h1>BENVENUTO NOME ADMIN</h1>
+       <h4>Scegli cosa vuoi fare nella barra qui a sinistra</h4>
     </section>
     
 </body>
