--- a/FrontendGameShock/vedi_accessorio_amm.html
+++ b/FrontendGameShock/vedi_accessorio_amm.html
@@ -31,8 +31,6 @@
                 <li><a href="/home_amm.html">Home Admin</a></li>
                 <li><a href="/inserisci_videogame_amm.html">Insert Videogame</a></li>
                 <li><a href="/inserisci_accessorio_amm.html">Insert Accessory</a></li>
-                <li><a href="/cancella_videogame_amm.html">Delete Videogame</a></li>
-                <li><a href="/cancella_accessorio_amm.html">Delete Accessory</a></li>
                 <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
                 <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
             </ul>
@@ -42,44 +40,59 @@
     <section class="content_page">
         <h3>Show Accessory</h3>
         <div class="content_item">
-            <div class="img_item">
-                <img src="img/controller.jpg" alt="">
-            </div>
-            <h5>Name: nomeprova</h5>
-            <h5>Code: codiceprova</h5>
-            <h5>Platform: nomepiattaforma</h5>
+            <a href="dettagli_accessorio.html" class="link_item">
+                <div class="img_item">
+                    <img src="img/controller.jpg" alt="">
+                </div>
+                <h5>Name: nomeprova</h5>
+                <h5>Code: codiceprova</h5>
+                <h5>Platform: nomepiattaforma</h5>
+            </a>
+            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
         <div class="content_item">
-            <div class="img_item">
-                <img src="img/controller.jpg" alt="">
-            </div>
-            <h5>Name: nomeprova</h5>
-            <h5>Code: codiceprova</h5>
-            <h5>Platform: nomepiattaforma</h5>
+            <a href="dettagli_accessorio.html" class="link_item">
+                <div class="img_item">
+                    <img src="img/controller.jpg" alt="">
+                </div>
+                <h5>Name: nomeprova</h5>
+                <h5>Code: codiceprova</h5>
+                <h5>Platform: nomepiattaforma</h5>
+            </a>
+            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
         <div class="content_item">
-            <div class="img_item">
-                <img src="img/controller.jpg" alt="">
-            </div>
-            <h5>Name: nomeprova</h5>
-            <h5>Code: codiceprova</h5>
-            <h5>Platform: nomepiattaforma</h5>
+            <a href="dettagli_accessorio.html" class="link_item">
+                <div class="img_item">
+                    <img src="img/controller.jpg" alt="">
+                </div>
+                <h5>Name: nomeprova</h5>
+                <h5>Code: codiceprova</h5>
+                <h5>Platform: nomepiattaforma</h5>
+            </a>
+            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
         <div class="content_item">
-            <div class="img_item">
-                <img src="img/controller.jpg" alt="">
-            </div>
-            <h5>Name: nomeprova</h5>
-            <h5>Code: codiceprova</h5>
-            <h5>Platform: nomepiattaforma</h5>
+            <a href="dettagli_accessorio.html" class="link_item">
+                <div class="img_item">
+                    <img src="img/controller.jpg" alt="">
+                </div>
+                <h5>Name: nomeprova</h5>
+                <h5>Code: codiceprova</h5>
+                <h5>Platform: nomepiattaforma</h5>
+            </a>
+            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
         <div class="content_item">
-            <div class="img_item">
-                <img src="img/controller.jpg" alt="">
-            </div>
-            <h5>Name: nomeprova</h5>
-            <h5>Code: codiceprova</h5>
-            <h5>Platform: nomepiattaforma</h5>
+            <a href="dettagli_accessorio.html" class="link_item">
+                <div class="img_item">
+                    <img src="img/controller.jpg" alt="">
+                </div>
+                <h5>Name: nomeprova</h5>
+                <h5>Code: codiceprova</h5>
+                <h5>Platform: nomepiattaforma</h5>
+            </a>
+            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
     </section>
 
