Fine parte frontend

--- a/FrontendGameShock/inserisci_accessorio_amm.html
+++ b/FrontendGameShock/inserisci_accessorio_amm.html
@@ -16,10 +16,8 @@
         </div>
         <div class="utility">
             <ul class="menu">
-                <li class="flip_menu"><a href="home.html">Home</a></li>
-                <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
-                <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
-                <li class="flip_menu"><a href="">Informazioni</a></li>
+                <li class="flip_menu"><a href="home.html">Esci</a></li>
+                <li class="flip_menu"><a href="home_amm.html">Ciao, nome amministratore</a></li>
             </ul>
             <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
         </div>
@@ -31,8 +29,8 @@
                 <li><a href="/home_amm.html">Home Admin</a></li>
                 <li><a href="/inserisci_videogame_amm.html">Insert Videogame</a></li>
                 <li><a href="/inserisci_accessorio_amm.html">Insert Accessory</a></li>
-                <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
-                <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
+                <li><a href="/vedi_videogame_amm.html">Show/Delete Videogame</a></li>
+                <li><a href="/vedi_accessorio_amm.html">Show/Delete Accessory</a></li>
             </ul>
         </div>
     </nav>
