--- a/FrontendGameShock/vedi_videogame_amm.html
+++ b/FrontendGameShock/vedi_videogame_amm.html
@@ -16,10 +16,8 @@
         </div>
         <div class="utility">
             <ul class="menu">
-                <li class="flip_menu"><a href="home.html">Home</a></li>
-                <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
-                <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
-                <li class="flip_menu"><a href="">Informazioni</a></li>
+                <li class="flip_menu"><a href="home.html">Esci</a></li>
+                <li class="flip_menu"><a href="home_amm.html">Ciao, nome amministratore</a></li>
             </ul>
             <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
         </div>
@@ -31,14 +29,21 @@
                 <li><a href="/home_amm.html">Home Admin</a></li>
                 <li><a href="/inserisci_videogame_amm.html">Insert Videogame</a></li>
                 <li><a href="/inserisci_accessorio_amm.html">Insert Accessory</a></li>
-                <li><a href="/vedi_videogame_amm.html">Show Videogame</a></li>
-                <li><a href="/vedi_accessorio_amm.html">Show Accessory</a></li>
+                <li><a href="/vedi_videogame_amm.html">Show/Delete Videogame</a></li>
+                <li><a href="/vedi_accessorio_amm.html">Show/Delete Accessory</a></li>
             </ul>
         </div>
     </nav>
 
     <section class="content_page">
-        <h3>Show Videogame</h3>
+        <div class="title_and_search">
+            <h1>Videogame</h1>
+            <form action="#">
+                <input type="text" placeholder="ricerca nome videogame">
+                <input type="submit" value="Search">
+            </form>
+        </div>
+
         <div class="content_item">
             <a href="dettagli_videogame.html" class="link_item">
                 <div class="img_item">
@@ -48,8 +53,9 @@
                 <h5>Code: codiceprova</h5>
                 <h5>Platform: nomepiattaforma</h5>
             </a>
-            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
+            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
+
         <div class="content_item">
             <a href="dettagli_videogame.html" class="link_item">
                 <div class="img_item">
@@ -59,8 +65,9 @@
                 <h5>Code: codiceprova</h5>
                 <h5>Platform: nomepiattaforma</h5>
             </a>
-            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
+            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
+
         <div class="content_item">
             <a href="dettagli_videogame.html" class="link_item">
                 <div class="img_item">
@@ -70,8 +77,9 @@
                 <h5>Code: codiceprova</h5>
                 <h5>Platform: nomepiattaforma</h5>
             </a>
-            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
+            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
+
         <div class="content_item">
             <a href="dettagli_videogame.html" class="link_item">
                 <div class="img_item">
@@ -81,30 +89,9 @@
                 <h5>Code: codiceprova</h5>
                 <h5>Platform: nomepiattaforma</h5>
             </a>
-            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
+            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
         </div>
-        <div class="content_item">
-            <a href="dettagli_videogame.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/assettoCorsa.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
-        <div class="content_item">
-            <a href="dettagli_videogame.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/assettoCorsa.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
+        
     </section>
 
 
